fix jvm options